--- a/css/styles.css
+++ b/css/styles.css
@@ -51,12 +51,12 @@ pre, code {
 	font-size:16px;
 }
 
-button, .btn {
-	font-size: 32px;
+.btn-large {
+	font-size: 28px;
 }
 
 .reveal iframe {
 	height:100%;
-	min-height: 700px;
+	min-height: 600px;
 	width:100%;
 }
